[gd_scene load_steps=35 format=3 uid="uid://bcyc8qgbo462v"]

[ext_resource type="Texture2D" uid="uid://7ol6c3jio0ak" path="res://arts/boss/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="1_3ib1x"]
[ext_resource type="Script" path="res://script/boss.gd" id="1_arqcm"]
[ext_resource type="Texture2D" uid="uid://bgs218rc1e2wo" path="res://arts/boss/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" id="2_mducq"]
[ext_resource type="Script" path="res://script/FiniteStateMachine.gd" id="3_f1dbm"]
[ext_resource type="AudioStream" uid="uid://vg77lpgk7gsy" path="res://Audio/Laser Sound Effect.mp3" id="4_6uqni"]
[ext_resource type="Script" path="res://script/idle.gd" id="4_bjca8"]
[ext_resource type="Script" path="res://script/follow.gd" id="6_sdrcw"]
[ext_resource type="Script" path="res://script/MeleeAttack.gd" id="7_f0p6r"]
[ext_resource type="Script" path="res://script/HomingMissle.gd" id="8_o65hd"]
[ext_resource type="PackedScene" uid="uid://c8jlhs65ft2ic" path="res://scenes/boss_projectile.tscn" id="9_0fwb0"]
[ext_resource type="Script" path="res://script/ArmorBuff.gd" id="10_agnc4"]
[ext_resource type="Script" path="res://script/dash.gd" id="11_wbdet"]
[ext_resource type="Script" path="res://script/death.gd" id="12_dghc0"]
[ext_resource type="Script" path="res://script/laser.gd" id="12_jcsme"]
[ext_resource type="AudioStream" uid="uid://cg8pfuen43l4g" path="res://Audio/swoosh-6339.mp3" id="15_dkspn"]
[ext_resource type="AudioStream" uid="uid://dn8k2d2dj0yok" path="res://Audio/shoot-6-81136.mp3" id="16_0v8rf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqnfp"]
size = Vector2(250.109, 20)

[sub_resource type="Animation" id="Animation_v5wub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("melee_area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot_laser/laser_area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_6uqni")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer2D:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer2D2:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AudioStreamPlayer2D3:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i41tp"]
resource_name = "armor_buff"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uxvqe"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pn1x8"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fiahr"]
resource_name = "glowing"
length = 0.80001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uephx"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_msk25"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/laser")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot_laser/laser_area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_6uqni")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_j1aiw"]
resource_name = "laser_cast"
length = 1.00001
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hd8o5"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("melee_area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D2:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.875),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cywy3"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.875, 1.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gw8ks"]
_data = {
"RESET": SubResource("Animation_v5wub"),
"armor_buff": SubResource("Animation_i41tp"),
"block": SubResource("Animation_uxvqe"),
"death": SubResource("Animation_pn1x8"),
"glowing": SubResource("Animation_fiahr"),
"idle": SubResource("Animation_uephx"),
"laser": SubResource("Animation_msk25"),
"laser_cast": SubResource("Animation_j1aiw"),
"melee_attack": SubResource("Animation_hd8o5"),
"ranged_attack": SubResource("Animation_cywy3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xlhvq"]
radius = 14.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j3ubt"]
radius = 172.4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v088j"]
size = Vector2(48, 45.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8317"]
size = Vector2(36.5, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1amv"]
size = Vector2(72, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lkjk"]
size = Vector2(644.5, 373.75)

[node name="boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_arqcm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3ib1x")
hframes = 10
vframes = 10

[node name="pivot_laser" type="Node2D" parent="."]
position = Vector2(2, -17)

[node name="laser_area" type="Area2D" parent="pivot_laser" groups=["laser"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot_laser/laser_area"]
position = Vector2(124.945, 0)
shape = SubResource("RectangleShape2D_rqnfp")
disabled = true

[node name="pivot" type="Node2D" parent="."]
position = Vector2(2, -18)

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
position = Vector2(98, 17)
texture = ExtResource("2_mducq")
vframes = 15
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gw8ks")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(-1, -4)
shape = SubResource("CapsuleShape2D_xlhvq")

[node name="player_detection" type="Area2D" parent="."]
light_mask = 0
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource("CircleShape2D_j3ubt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1000.0

[node name="Label" type="Label" parent="CanvasLayer/ProgressBar"]
layout_mode = 0
offset_left = 1.0
offset_top = -26.0
offset_right = 98.0
offset_bottom = -3.0
text = "Stone golem
"

[node name="label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
size_flags_vertical = 8

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_f1dbm")

[node name="idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_bjca8")

[node name="follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_sdrcw")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_f0p6r")

[node name="HomingMissle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_o65hd")
bullet_node = ExtResource("9_0fwb0")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_agnc4")

[node name="dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_wbdet")

[node name="death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_dghc0")

[node name="laser" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_jcsme")

[node name="hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1, -2.25)
shape = SubResource("RectangleShape2D_v088j")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1.25, -1)
shape = SubResource("RectangleShape2D_h8317")

[node name="melee_area" type="Area2D" parent="." groups=["bossmelee"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="melee_area"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_d1amv")

[node name="dertect_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dertect_player"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_8lkjk")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6uqni")
volume_db = -8.179

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_dkspn")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_0v8rf")

[connection signal="body_entered" from="player_detection" to="FiniteStateMachine/idle" method="_on_player_detection_body_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
